<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">短信解析器</string>
    
    <!-- 主页面 -->
    <string name="main_title">短信解析器</string>
    <string name="btn_regex_rules">正则规则设置</string>
    <string name="btn_custom_rules">自定义规则设置</string>
    <string name="btn_request_permission">申请短信权限</string>
    
    <!-- 权限相关 -->
    <string name="permission_required">需要短信权限</string>
    <string name="permission_explanation">为了解析短信内容，应用需要访问您的短信权限。请在设置中手动开启权限。</string>
    <string name="permission_denied_title">权限被拒绝</string>
    <string name="permission_denied_message">短信权限被拒绝，应用无法正常工作。请在设置中手动开启权限。</string>
    <string name="btn_open_settings">打开设置</string>
    <string name="btn_cancel">取消</string>
    
    <!-- 正则规则页面 -->
    <string name="regex_rules_title">正则规则设置</string>
    <string name="regex_pattern_hint">请输入正则表达式</string>
    <string name="regex_test_text_hint">请输入测试文本</string>
    <string name="btn_test_regex">测试正则</string>
    <string name="btn_save_regex">保存规则</string>
    <string name="regex_test_result">测试结果：</string>
    
    <!-- 自定义规则页面 -->
    <string name="custom_rules_title">自定义规则</string>
    <string name="help">帮助</string>
    <string name="tag_label">标签</string>
    <string name="express_phone_label">快递电话</string>
    <string name="pickup_code_label">取件码</string>
    <string name="pickup_address_label">取件地址</string>
    <string name="before_label">前</string>
    <string name="after_label">后</string>
    <string name="sms_input_hint">请输入或粘贴短信内容，查看解析结果，以便检查规则是否有效</string>
    <string name="parse_result_label">解析结果：</string>
    <string name="btn_reset">重置</string>
    <string name="btn_use">使用</string>
</resources> 